# learn-llvm

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: dump_cpp_env.sh
src/: main.cpp
